# medical_api

./: Dockerfile  README.md  pyproject.toml
src/api/: models.py  serializers.py  tests.py  urls.py  views.py
src/api/management/commands/: __init__.py  seed_data.py
src/core/: settings.py  urls.py
src/users/: models.py
src/users/migrations/: 0001_initial.py
