[project]
name = "src"
version = "0.1.0"
description = "Тестовое медицинское API для Mad Dev"
authors = [
    {name = "Танцура Никита",email = "void4function@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.10"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

